force-app/main/default/objects/POL_to_PTL__c/POL_to_PTL__c.object-meta.xml
<CustomObject>
    <label>POL to PTL</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>POL to PTL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POL to PTL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>