force-app/main/default/objects/POL_to_PTL__c/fields/Allocated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Quantity__c</fullName>
    <label>Allocated Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>