force-app/main/default/objects/POL_to_PTL__c/fields/Product_Transfer_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Transfer_Line__c</fullName>
    <label>Product Transfer Line</label>
    <referenceTo>Product_transfer_line__c</referenceTo>
    <relationshipLabel>POL to PTL</relationshipLabel>
    <relationshipName>POL_to_PTL</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>