force-app/main/default/objects/POL_to_PTL__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_order_line__c</referenceTo>
    <relationshipLabel>POL to PTL</relationshipLabel>
    <relationshipName>POL_to_PTL</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>