force-app/main/default/objects/POL_to_PTL__c/fields/Quantity_in_POL__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_POL__c</fullName>
    <label>Quantity in POL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>