force-app/main/default/objects/POL_to_PTL__c/fields/Status_in_POL__c.field-meta.xml
<CustomField>
    <fullName>Status_in_POL__c</fullName>
    <label>Status in POL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Order_Line_Status</valueSetName>
    </valueSet>
</CustomField>