force-app/main/default/objects/POL_to_PTL__c/fields/Status_in_PTL__c.field-meta.xml
<CustomField>
    <fullName>Status_in_PTL__c</fullName>
    <label>Status in PTL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Transfer_Line_Status</valueSetName>
    </valueSet>
</CustomField>